india background with hand motion matrix

--- a/views/leap.html
+++ b/views/leap.html
@@ -302,7 +302,7 @@
     <div id="app" class="show-hands">
       <button id="showHands">Show Hands</button>
       <button id="hideHands">hide Hands</button>
-<!--       <div id="scene">
+      <div id="scene">
         <div id="cube" class="cube">
           <div class="face tp"></div>
           <div class="face lt"></div>
@@ -324,7 +324,7 @@
           <div class="face ft"></div>
           <div class="face bk"></div>
         </div>
-      </div> -->
+      </div>
     </div>
   </body>
 </html>
